--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fffdd0; /* Cream background */
+  background-color: #dfccaf; /* Cream background */
   font-family: sans-serif;
   margin: 0;
   padding: 0;
