--- a/style.css
+++ b/style.css
@@ -50,3 +50,22 @@ body {
 #tab3:checked ~ #content3 {
   display: block;
 }
+
+/* responsive video */
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
+      overflow: hidden;
+      max-width: 100%;
+      margin: 0 auto; /* center horizontally */
+    }
+
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
