--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #008CBA; /* Blue background color */
+  background-color: #b4a389 /* Blue background color */
   overflow: hidden;
   width: 0;
   height: 100%;
