--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* Base styling */
 body {
   margin: 0;
@@ -46,7 +47,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #b4a389; /* Updated background color */
+  background-color: #b4a389 
   overflow: hidden;
   width: 0;
   height: 100%;
@@ -61,7 +62,7 @@ body {
 /* Text within the overlay */
 .text {
   color: white;
-  font-size: 10vw; /* Increased size for larger text */
+  font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -135,19 +136,3 @@ footer a {
 /* Responsive video */
 .video-container {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-  margin: 0 auto; /* center horizontally */
-}
-
-.video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
-
