--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #b4a389 
+  background-color: #b4a389;
   overflow: hidden;
   width: 0;
   height: 100%;
