--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Base styling */
 body {
   margin: 0;
@@ -47,7 +46,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #b4a389;
+  background-color: #b4a389; /* Fixed missing semicolon */
   overflow: hidden;
   width: 0;
   height: 100%;
@@ -136,3 +135,18 @@ footer a {
 /* Responsive video */
 .video-container {
   position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin: 0 auto; /* center horizontally */
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
