--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #b4a389; /* Fixed missing semicolon */
+  background-color: rgba(180, 163, 137, 0.5); /* 50% transparency */
   overflow: hidden;
   width: 0;
   height: 100%;
