--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(180, 163, 137, 0.5); /* 50% transparency */
+  background-color: rgba(180, 163, 137, 0.7); /* 50% transparency */
   overflow: hidden;
   width: 0;
   height: 100%;
@@ -60,15 +60,16 @@ body {
 
 /* Text within the overlay */
 .text {
-  color: white;
-  font-size: 20px;
+  color: #511301; 
+  font-size: 150px; 
+  font-weight: bold; 
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  white-space: nowrap;
+  white-space: nowrap; /* Prevent text from wrapping */
 }
 
 /* Container */
