--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ h2 {
   border-radius: 5px;
   background-color: #b4a389; /* Light gray background for the form */
   padding: 20px;
-  max-width: 600px; /* Max width for the form */
+  max-width: 720px; 
   margin: 0 auto; /* Center the container */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow around the form container */
 }
