--- a/style.css
+++ b/style.css
@@ -137,8 +137,6 @@ h2 {
   }
 }
 
-
-
 /* Map */
 .map {
   width: 100%;
@@ -146,7 +144,7 @@ h2 {
 }
 
 /* Watch Video section title (h2) */
-#Watch Video h2 {
+#Watch h2 {
   font-size: 36px; /* Same font size as the About title */
   font-weight: bold; /* Make the title bold */
   color: #902e15; /* Same color as the About title */
