--- a/style.css
+++ b/style.css
@@ -15,7 +15,17 @@ body {
   position: sticky;
   top: 0;
   z-index: 100;
+  height: 50px; 
 }
+
+.home-icon {
+  width: 30px; /* Adjust the width of the icon */
+  height: auto; /* Maintain aspect ratio */
+  vertical-align: middle; /* Align it with the text */
+  border: 1px solid red; /* Add a temporary border for debugging visibility */
+  background-color: #fff; /* Ensure it's visible on a white background */
+}
+
 
 .navbar a {
   text-decoration: none;
