--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ body {
 .nav-right a:hover {
   text-decoration: underline;
 }
+.nav-right a[href="#Home"]:hover {
+  text-decoration: none; /* No underline when hovering over the Home icon */
+}
 
 /* Change the border color of the Home icon on hover */
 .nav-right a[href="#Home"]:hover .home-icon {
